--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 BASE_URL_HOST_DEV=localhost:4000
 JWT_KEY=CoronaWillGone
 MONGODB_URL=mongodb+srv://dcc:rahasia@cluster0.vdzld.mongodb.net/dcc_komputer
-MONGODB_URL_DPROD=mongodb+srv://dcc:rahasia@cluster0.qp1vq.mongodb.net/dcc_komputer
+MONGODB_URL_DPROD=mongodb+srv://dcc:rahasia@cluster0.vdzld.mongodb.net/dcc_komputer
 MONGODB_URL_LOCAL=mongodb://127.0.0.1:27017/dcc_komputer
 NODE_ENV=development
 PORT=5000
